--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
+  "name": "bemotivated",
+  "homepage": "https://github.com/MarinaShaposhnikova/BeMotivated",
+  "license": "MIT",
+  "private": true,
+  "version": "6.1.0",
+  "description": "This project is created for studying front-end development",
+  "scripts": {
+    "build": "./node_modules/.bin/webpack",
+    "build:prod": "./node_modules/.bin/webpack -p",
+    "watch": "./node_modules/.bin/webpack --watch",
+    "dev": "./node_modules/.bin/webpack-dev-server"
+  },
   "devDependencies": {
     "@alrra/travis-scripts": "^3.0.1",
     "apache-server-configs": "^3.0.0",
     "archiver": "^2.1.1",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.6.1",
+    "babel-core": "~6.26.0",
+    "babel-loader": "~7.1.2",
+    "babel-preset-env": "~1.6.0",
     "babel-register": "^6.26.0",
+    "clean-webpack-plugin": "~0.1.17",
+    "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-recommended": "^2.0.0",
     "eslint-plugin-mocha": "^5.0.0",
+    "extract-text-webpack-plugin": "~3.0.0",
+    "file-loader": "~1.1.4",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
@@ -17,16 +34,24 @@
     "gulp-header": "^2.0.5",
     "gulp-jscs": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "^1.2.3",
     "gulp-replace": "^0.6.1",
+    "html-loader": "~0.5.1",
+    "html-webpack-plugin": "~2.30.1",
     "jquery": "3.3.1",
-    "mocha": "^5.1.1",
+    "mocha": "^5.2.0",
     "modernizr": "3.6.0",
+    "node-sass": "~4.5.3",
     "normalize.css": "8.0.0",
     "run-sequence": "^2.2.1",
+    "sass-loader": "~6.0.6",
     "ssri": "^6.0.0",
     "strip-json-comments": "^2.0.1",
-    "travis-after-all": "^1.4.5"
+    "style-loader": "~0.18.2",
+    "travis-after-all": "^1.4.5",
+    "webpack": "~3.6.0",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^2.9.7"
   },
   "engines": {
     "node": ">=6",
@@ -45,15 +70,6 @@
       "test": "test"
     }
   },
-  "homepage": "https://html5boilerplate.com/",
-  "license": "MIT",
-  "name": "html5-boilerplate",
-  "scripts": {
-    "build": "gulp build",
-    "test": "gulp archive && mocha --require babel-core/register --reporter spec --timeout 5000"
-  },
-  "version": "6.1.0",
-  "description": "A professional front-end template for building fast, robust, and adaptable web apps or sites.",
   "files": [
     "CHANGELOG.md",
     "LICENSE.txt",
@@ -64,6 +80,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/h5bp/html5-boilerplate.git"
+    "url": "https://github.com/MarinaShaposhnikova/BeMotivated"
+  },
+  "dependencies": {
+    "lodash": "^4.17.10"
   }
 }
