--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "del": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-recommended": "^2.0.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-mocha": "^5.0.0",
+    "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "~3.0.0",
     "file-loader": "~1.1.4",
     "glob": "^7.1.2",
