--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@alrra/travis-scripts": "^3.0.1",
     "apache-server-configs": "^3.0.0",
     "archiver": "^2.1.1",
+    "babel-cli": "^6.26.0",
     "babel-core": "~6.26.0",
     "babel-loader": "~7.1.2",
     "babel-preset-env": "~1.6.0",
+    "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "~0.1.17",
     "css-loader": "^0.28.11",
@@ -85,6 +87,8 @@
     "url": "https://github.com/MarinaShaposhnikova/BeMotivated"
   },
   "dependencies": {
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   }
 }
