--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   "dependencies": {
     "lodash": "^4.17.10",
     "react": "^16.4.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.4.0"
   }
 }
